@@ -1,8 +1,19 @@
 StatContour <- proto(Stat, {
-  calculate <- function(., data, scales, na.rm = FALSE, ...) {
+  calculate <- function(., data, scales, bins=NULL, binwidth=NULL, breaks = NULL, na.rm = FALSE, ...) {
     data <- remove_missing(data, na.rm, name = "stat_contour")
-    
-    levels <- scales$z$input_breaks()
+
+    # If no parameters set, use pretty bins
+    if (is.null(bins) && is.null(binwidth) && is.null(breaks)) {
+      breaks <- pretty(range(data$z))
+    }
+    # If provided, use bins to calculate binwidth
+    if (!is.null(bins)) {
+      binwidth <- diff(range(data$z)) / bins
+    }
+    # If necessary, compute breaks from binwidth
+    if (is.null(breaks)) {
+      breaks <- fullseq(range(data$z), binwidth)
+    }
     
     gridise <- function(x) {
       unique <- sort(unique(x[!is.na(x)]))
@@ -16,7 +27,7 @@ StatContour <- proto(Stat, {
     gridz <- matrix(NA, nrow = length(gridx$unique), ncol = length(gridy$unique))
     gridz[(gridy$group - 1) * length(gridx$unique) + gridx$group] <- data$z
 
-    cl <- contourLines(x = gridx$unique, y = gridy$unique, z = gridz, levels = levels)  
+    cl <- contourLines(x = gridx$unique, y = gridy$unique, z = gridz, levels = breaks)  
      
     cl <- mapply(function(x, piece) {
       rbind(data.frame(x, piece=piece), c(NA, NA, NA))
@@ -38,33 +49,42 @@ StatContour <- proto(Stat, {
   
   examples <- function(.) {
     # Generate data
-    volcano3d <- rename(melt(volcano), c(X1="x", X2="y", value="z"))
-    v <- ggplot(volcano3d, aes(x=x,y=y,z=z))
+    volcano3d <- melt(volcano)
+    names(volcano3d) <- c("x", "y", "z")
+
+    # Basic plot
+    v <- ggplot(volcano3d, aes(x, y, z = z))
     v + stat_contour()
+
+    # Setting bins creates evenly spaced contours in the range of the data
+    v + stat_contour(bins = 2)
+    v + stat_contour(bins = 10)
+    
+    # Setting binwidth does the same thing, parameterised by the distance
+    # between contours
+    v + stat_contour(binwidth = 2)
+    v + stat_contour(binwidth = 5)
+    v + stat_contour(binwidth = 10)
 
     # Add aesthetic mappings
     v + stat_contour(aes(size = ..level..))
     v + stat_contour(aes(colour = ..level..))
 
     # Change scale
-    v + stat_contour(aes(colour = ..level..), size=2) + 
-      scale_colour_gradient(low="brown", high="white")
-
-    v + stat_contour() + scale_z_continuous(breaks=c(100, 150))
-    v + stat_contour(size=0.5) + scale_z_continuous(breaks=seq(95, 195, by=2))
-    v + stat_contour() + scale_z_log10()
+    v + stat_contour(aes(colour = ..level..), size = 2) + 
+      scale_colour_gradient(low = "brown", high = "white")
 
     # Set aesthetics to fixed value
-    v + stat_contour(colour="red")
-    v + stat_contour(size=2, linetype=4)
+    v + stat_contour(colour = "red")
+    v + stat_contour(size = 2, linetype = 4)
 
     # Try different geoms
     v + stat_contour(geom="polygon", aes(fill=..level..))
-    v + geom_tile(aes(fill=z)) + stat_contour()
+    v + geom_tile(aes(fill = z)) + stat_contour()
     
     # Use qplot instead
-    qplot(x, y, z, data=volcano3d, geom="contour")
-    qplot(x, y, z, data=volcano3d, stat="contour", geom="path")
+    qplot(x, y, z, data = volcano3d, geom = "contour")
+    qplot(x, y, z, data = volcano3d, stat = "contour", geom = "path")
   }
 })
 
