@@ -105,22 +105,7 @@ scale_y_prob <- ScaleProb$build_accessor(list(variable = "\"y\""))
 scale_y_probit <- ScaleProbit$build_accessor(list(variable = "\"y\""))
 scale_y_reverse <- ScaleReverse$build_accessor(list(variable = "\"y\""))
 scale_y_sqrt <- ScaleSqrt$build_accessor(list(variable = "\"y\""))
-scale_z_asn <- ScaleAsn$build_accessor(list(variable = "\"z\""))
-scale_z_atanh <- ScaleAtanh$build_accessor(list(variable = "\"z\""))
-scale_z_continuous <- ScaleContinuous$build_accessor(list(variable = "\"z\""))
 scale_z_discrete <- ScaleDiscretePosition$build_accessor(list(variable = "\"z\""))
-scale_z_exp <- ScaleExp$build_accessor(list(variable = "\"z\""))
-scale_z_inverse <- ScaleInverse$build_accessor(list(variable = "\"z\""))
-scale_z_log <- ScaleLog$build_accessor(list(variable = "\"z\""))
-scale_z_log10 <- ScaleLog10$build_accessor(list(variable = "\"z\""))
-scale_z_log2 <- ScaleLog2$build_accessor(list(variable = "\"z\""))
-scale_z_logit <- ScaleLogit$build_accessor(list(variable = "\"z\""))
-scale_z_pow <- ScalePow$build_accessor(list(variable = "\"z\""))
-scale_z_pow10 <- ScalePow10$build_accessor(list(variable = "\"z\""))
-scale_z_prob <- ScaleProb$build_accessor(list(variable = "\"z\""))
-scale_z_probit <- ScaleProbit$build_accessor(list(variable = "\"z\""))
-scale_z_reverse <- ScaleReverse$build_accessor(list(variable = "\"z\""))
-scale_z_sqrt <- ScaleSqrt$build_accessor(list(variable = "\"z\""))
 stat_bin <- StatBin$build_accessor()
 stat_bin2d <- StatBin2d$build_accessor()
 stat_binhex <- StatBinhex$build_accessor()
